--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "amazon-cognito-identity-js": "^6.0.1",
+    "aws-amplify": "^5.0.1",
     "expo": "^47.0.0",
     "expo-splash-screen": "~0.17.5",
     "react": "18.1.0",
