--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "aws-amplify": "^5.0.1",
     "expo": "^47.0.0",
     "expo-splash-screen": "~0.17.5",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "^13.6.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
