--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "^9.3.6",
+    "@react-native-community/slider": "^4.3.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@shopify/flash-list": "^1.4.0",
+    "@tanstack/react-query": "^4.16.1",
     "amazon-cognito-identity-js": "^6.0.1",
     "aws-amplify": "^5.0.1",
+    "axios": "^1.1.3",
     "expo": "^47.0.0",
     "expo-splash-screen": "~0.17.5",
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.6.0",
     "yup": "^0.32.11"
   },
