--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "amazon-cognito-identity-js": "^6.0.1",
     "aws-amplify": "^5.0.1",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "expo": "^47.0.0",
     "expo-splash-screen": "~0.17.5",
     "formik": "^2.2.9",
@@ -32,6 +33,8 @@
     "react-native-screens": "^3.18.2",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.6.0",
+    "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
