--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
+    "react-native-track-player": "^3.2.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "yup": "^0.32.11"
