--- a/app.json
+++ b/app.json
@@ -1,4 +1,16 @@
 {
   "name": "SpotifyCloneV2",
-  "displayName": "SpotifyCloneV2"
+  "displayName": "SpotifyCloneV2",
+  "expo": {
+    "plugins": [
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
+          "isAccessMediaLocationEnabled": true
+        }
+      ]
+    ]
+  }
 }
