--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "expo": "^47.0.0",
+    "expo-media-library": "~15.0.0",
     "expo-splash-screen": "~0.17.5",
     "formik": "^2.2.9",
     "react": "18.1.0",
@@ -35,6 +36,7 @@
     "react-native-track-player": "^3.2.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
+    "recursive-readdir": "^2.2.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
