expo media library setup

--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-fs": "^2.20.0",
+    "react-native-get-music-files": "https://github.com/cinder92/react-native-get-music-files.git",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.6.0",
     "react-native-track-player": "^3.2.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
-    "recursive-readdir": "^2.2.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
