--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@tanstack/react-query": "^4.16.1",
     "amazon-cognito-identity-js": "^6.0.1",
     "aws-amplify": "^5.0.1",
-    "axios": "^1.1.3",
+    "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "expo": "^47.0.0",
     "expo-media-library": "~15.0.0",
+    "expo-modules-autolinking": ">=0.8.1",
     "expo-splash-screen": "~0.17.5",
     "formik": "^2.2.9",
     "react": "18.1.0",
