--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Neel",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "passport-oauth2": "^1.6.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
